<resources>
    <string name="app_name">Sgardens</string>
    <string name="hint_username">Username</string>
    <string name="hint_password">Password</string>
    <string name="button_next">Next</string>
    <string name="button_cancel">Cancel</string>
    <string name="error_password">Password error.</string>
    <string name="filter_title">Filter</string>
    <string name="search_title">Search</string>
    <string name="product_title">Title</string>
    <string name="product_description">Secondary text</string>

    <!-- Shrine backdrop menu labels -->
    <string name="featured_label">Featured</string>
    <string name="apartment_label">Apartment</string>
    <string name="accessories_label">Accessories</string>
    <string name="shoes_label">Shoes</string>
    <string name="tops_label">Tops</string>
    <string name="bottoms_label">Bottoms</string>
    <string name="dresses_label">Dresses</string>

    <!--  Sgardens BottomNavigator Lable Name  -->
    <string name="sprout_label">Gardens</string>
    <string name="config_label">Config</string>
    <string name="account_label">Account</string>
    <string name="floor_1">Floor 1</string>

    <!-- number picker-->
    <string name="number_picker_formatter">number_picker_formatter</string>
    <string name="roboto_light">roboto_light</string>
    <string name="textview8">TextView8</string>
    <string name="light">Light</string>
    <string name="switch1">Switch</string>
    <string name="auto_server">Auto server</string>
    <string name="water">Water</string>
    <string name="floor_2">Floor 2</string>
</resources>
