<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/app_bar"
            style="@style/Widget.Sgardens.Toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:menu="@menu/sg_toolbar_menu"
            app:navigationIcon="@drawable/sg_menu"
            app:title="@string/app_name" />
    </com.google.android.material.appbar.AppBarLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_marginTop="60dp"
        android:layout_height="60dp">
        <Switch
            android:id="@+id/switchserver"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/auto_server"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"></Switch>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="120dp"
        android:orientation="vertical">

        <!--        <LinearLayout-->
        <!--            android:layout_width="match_parent"-->
        <!--            android:layout_height="0dp"-->
        <!--            android:layout_weight="1"-->
        <!--            android:orientation="vertical">-->

        <!--            <LinearLayout-->
        <!--                android:layout_width="match_parent"-->
        <!--                android:layout_height="match_parent"-->
        <!--                android:layout_weight="1"-->
        <!--                android:orientation="vertical">-->

        <!--                <TextView-->
        <!--                    android:id="@+id/textView"-->
        <!--                    android:layout_width="match_parent"-->
        <!--                    android:layout_height="0dp"-->
        <!--                    android:layout_weight="1"-->
        <!--                    android:gravity="center"-->
        <!--                    android:text="@string/floor_1" />-->

        <!--                <LinearLayout-->
        <!--                    android:layout_width="match_parent"-->
        <!--                    android:layout_height="match_parent"-->
        <!--                    android:layout_weight="1"-->
        <!--                    android:orientation="horizontal">-->



        <!--                </LinearLayout>-->
        <!--            </LinearLayout>-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/floor_1"
                android:gravity="center"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal">
                <Switch
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:id="@+id/switch1"
                    android:text="@string/water"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp"></Switch>

                <NumberPicker
                    android:id="@+id/number_picker1"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content">

                </NumberPicker>

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView1"
                    android:layout_width="28dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:paddingLeft="20dp"
                    android:text="Light" />

                <SeekBar
                    android:id="@+id/seekBar1"
                    android:layout_width="205dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1" />

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="90dp"
                    android:layout_weight="1"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:paddingLeft="20dp"
                    android:text="TextView2" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical"
            android:layout_marginBottom="60dp">

            <TextView
                android:id="@+id/textView9"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/floor_2" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal">


                <Switch
                    android:id="@+id/switch2"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:paddingStart="20dp"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp"
                    android:text="@string/water" />

                <NumberPicker
                    android:id="@+id/number_picker2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"></NumberPicker>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="28dp"
                    android:layout_height="match_parent"
                    android:paddingLeft="20dp"
                    android:gravity="center_vertical"
                    android:layout_weight="1"
                    android:text="@string/light"
                    android:paddingStart="20dp" />

                <SeekBar
                    android:id="@+id/seekBar2"
                    android:layout_width="205dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1" />

                <TextView
                    android:id="@+id/textView8"
                    android:gravity="center_vertical"
                    android:layout_width="90dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/textview8" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:background="@color/colorAccent"
        app:itemIconTint="@drawable/bottom_navigation_item_colors"
        app:itemTextColor="@color/textColorPrimary"
        app:labelVisibilityMode="labeled"
        app:menu="@menu/navigation" />

</FrameLayout>